@@ -1,4 +1,5 @@
 0.1-77
+- refactor adp code wrt transformation matrices
 - add matrix.smooth()
 - improve labels for oce.axis.POSIXct()
 - add debug=getOption("oce.debug") as an argument some functions
